<resources>
    <string name="app_name">EasySplit</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fab">fab</string>
    <string name="Activities">Активности</string>
    <string name="textInActivities">Здесь будут показаны действия вас и ваших друзей</string>
    <string name="todo">TODO</string>
    <string name="textGroup">Группа:</string>
    <string name="description">Описание</string>
    <string name="_0_00">0.00</string>
    <string name="whoPaid">Кто платит?</string>
    <string name="_______">                   </string>
    <string name="howSplit">Как делится?</string>
    <string name="equally">  Поровну  </string>
    <string name="nickName">Никнейм</string>
    <string name="id">Id</string>
    <string name="_12345">12345</string>
    <string name="__12345">   (Цифры после имени. Например, #12345)</string>
    <string name="addFriend">Добавить друга</string>
    <string name="easysplit">Друзья в EasySplit</string>
    <string name="friends">Друзья</string>
    <string name="textFriends">Друзья появятся здесь</string>
    <string name="ownSum">В сумме, вы должны</string>
    <string name="_100_50">100.50руб</string>
    <string name="addFriends">Добавить друзей</string>
    <string name="nameOfGroup">Имя группы</string>
    <string name="example">Example</string>
    <string name="textEnterGroup">Для чего ваша группа?</string>
    <string name="home">Дом</string>
    <string name="trip">Поездка</string>
    <string name="party">Мероприятие</string>
    <string name="other">Другое</string>
    <string name="family">Семья</string>
    <string name="work">Работа</string>
    <string name="love">Отношения</string>
    <string name="addToGroup">Добавить участника</string>
    <string name="textEnterGroup2">Пока ты здесь один</string>
    <string name="textEnterGroup3">Начни добавлять расходы и все изменится</string>
    <string name="textEnterGroup4">Пока здесь нет расходов</string>
    <string name="textEnterGroup5">В сумме тебе должны 0руб</string>
    <string name="textEnterGroup6">1 участник</string>
    <string name="textEnterGroup7">Example</string>
    <string name="groups">Группы</string>
    <string name="textGroup2">У вас пока нет групп</string>
    <string name="textGroup3">Создать группу</string>
    <string name="profile">Профиль</string>
    <string name="maksvish135_gmail_com">maksvish135@gmail.com</string>
    <string name="profileText1">Выйти из аккаунта</string>
    <string name="maks_876051">Maks#876051</string>
    <string name="registration">Регистрация</string>
    <string name="nickname">Никнейм</string>
    <string name="email">Почта</string>
    <string name="password">Пароль</string>
    <string name="repeatPassword">Повторите пароль</string>
    <string name="register">Зарегистрироваться</string>
    <string name="alreadyHaveAcc">Уже есть аккаунт?</string>
    <string name="login">Войти</string>
    <string name="textResetPassword">Новый пароль</string>
    <string name="textResetPassword2">Повторите пароль</string>
    <string name="textContinue">Продолжить</string>
    <string name="enterYourEmail">Введите свой email и мы пришлем вам ссылку для сброса пароля</string>
    <string name="emailEn">Email</string>
    <string name="sendCode">Отправить код</string>
    <string name="equally2">Поровну</string>
    <string name="unequally2">Непоровну</string>
    <string name="textEqually1">Поделить поровну</string>
    <string name="textEqually">Выберите людей, которые должны равную долю</string>
    <string name="textUnequally">Поделить точными частями</string>
    <string name="textUnequally1">укажите точно, сколько должен каждый человек</string>
    <string name="_0_100">₽0 из ₽100</string>
    <string name="_123456">123456</string>
    <string name="textVerification">Мы прислали код для верификации на</string>
    <string name="textVerification2">вашу почту</string>
    <string name="textVerification3">Проверьте ящик</string>
    <string name="confirm">Подтвердить</string>
    <string name="appName">EASYSPLIT</string>
    <string name="textLogin">Логин</string>
    <string name="forgotPassword">Забыли пароль?</string>
    <string name="enter">Войти</string>
    <string name="noAcc">Нет аккаунта?</string>
    <string name="createAcc">Создать аккаунт</string>
    <string name="month">Апр</string>
    <string name="_22">22</string>
    <string name="potato">Potato</string>
    <string name="misha_paid_300_00">Misha paid $300.00</string>
    <string name="youOwn">ты должен</string>
    <string name="_300_00">$300.00</string>
    <string name="you">Вы</string>
    <string name="textActivity1">" добавил"</string>
    <string name="textActivity2">Бананы</string>
    <string name="textActivity3">в группу</string>
    <string name="textActivity4">Check</string>
    <string name="textActivity5">Сегодня, 18:09</string>
    <string name="textItemDebt1">Maks должен тебе</string>
    <string name="textItemDebt2">100руб</string>
    <string name="marina">Marina</string>
    <string name="textItemFriend1">должен тебе</string>
    <string name="textItemFriend2">100.50руб</string>
    <string name="oneMember">1 участник</string>
    <string name="textToolbar">Выберите группу</string>
    <string name="textToolbar2">Добавить расход</string>
    <string name="group">Группы</string>
    <string name="addGroup">Добавить группу</string>
</resources>