<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.expense.SplitEquallyFragment"
    android:orientation="vertical">

    <include layout="@layout/toolbar_with_done"
        android:id="@+id/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="13dp">
        <TextView
            android:id="@+id/splitEqually"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/equally2"
            style="@style/InterMedium18"
            android:textColor="@color/grey"
            android:layout_marginStart="19dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unequally2"
            style="@style/InterMedium18"
            android:textColor="@color/aqua"
            android:layout_marginStart="29dp"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey"
        android:layout_marginTop="11.5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textUnequally"
        android:layout_gravity="center"
        style="@style/InterSemiBold18"
        android:textColor="@color/black"
        android:layout_marginTop="20.5dp"/>

    <TextView
        android:layout_width="234dp"
        android:layout_height="wrap_content"
        android:text="@string/textUnequally1"
        android:layout_gravity="center"
        style="@style/InterRegular18"
        android:textColor="@color/grey"
        android:layout_marginTop="20.5dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewSplitUnequally"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="34dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:id="@+id/sumRemained"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0_100"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textColor="@color/black"
                style="@style/InterSemiBold15"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>