<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="67dp"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/imageOfUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_user_54"
        android:contentDescription="@string/todo"/>

    <TextView
        android:id="@+id/nameOfUser"
        style="@style/InterRegular18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="19dp"
        android:text="@string/marina"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageOfUser"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="25dp">

            <TextView
                android:id="@+id/owe"
                style="@style/InterLight16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textItemFriend1"
                android:textColor="@color/red" />

            <TextView
                android:id="@+id/sum"
                style="@style/InterLight16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textItemFriend2"
                android:textColor="@color/red" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>