<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/parent"
    android:layout_marginTop="20dp">

    <ImageView
        android:id="@+id/imageOfGroup"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_group_1"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/todo"/>

    <TextView
        android:id="@+id/nameOfGroup"
        style="@style/InterSemiBold20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginTop="24dp"
        android:text="@string/example"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/imageOfGroup"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/numberOfPeople"
        style="@style/InterSemiBold18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:text="@string/oneMember"
        android:textColor="@color/grey"
        app:layout_constraintStart_toEndOf="@+id/imageOfGroup"
        app:layout_constraintTop_toBottomOf="@+id/nameOfGroup"
        android:layout_marginTop="6dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>