<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/imageOfUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:src="@drawable/ic_user_54"
        android:contentDescription="@string/todo"/>

    <TextView
        android:id="@+id/nameOfUser"
        style="@style/InterRegular18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="19dp"
        android:text="@string/marina"
        android:textColor="@color/black" />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/sum"
            style="@style/InterBold16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="33dp"
            android:hint="@string/_0_00"
            android:textDirection="rtl"
            android:textColorHint="@color/grey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:inputType="numberPassword"/>

        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:src="@drawable/ic_ruble_black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/sum"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/todo"/>
    </androidx.constraintlayout.widget.ConstraintLayout>



</LinearLayout>