<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.groups.GroupCreateFragment"
    android:orientation="vertical">

    <include layout="@layout/toolbar"
        android:id="@+id/toolbar"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="37dp">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/ic_group_2"
            android:id="@+id/imageGroupCreate"
            android:contentDescription="@string/todo" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="7dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nameOfGroup"
                android:textColor="@color/grey"
                style="@style/InterMedium16"
                android:layout_marginTop="14dp"/>
            <EditText
                android:id="@+id/nameOfGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                style="@style/InterMedium16"
                android:backgroundTint="@color/aqua" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textEnterGroup"
        style="@style/InterMedium16"
        android:textColor="@color/grey"
        android:layout_marginTop="33dp"
        android:layout_marginStart="31dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="17dp">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">
            <LinearLayout
                android:id="@+id/home"
                android:layout_width="110dp"
                android:layout_height="43dp"
                android:orientation="horizontal"
                android:background="@drawable/style_choose_group_type"
                android:layout_marginStart="30dp">
                <ImageView
                    android:id="@+id/home1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_home"
                    android:layout_marginStart="11dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/todo" />
                <TextView
                    android:id="@+id/home2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home"
                    android:layout_marginStart="14dp"
                    android:layout_gravity="center"
                    android:textColor="@color/grey"
                    style="@style/InterMedium14"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/trip"
                android:layout_width="110dp"
                android:layout_height="43dp"
                android:orientation="horizontal"
                android:background="@drawable/style_choose_group_type"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp">
                <ImageView
                    android:id="@+id/trip1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_traveler"
                    android:layout_marginStart="11dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/todo"/>
                <TextView
                    android:id="@+id/trip2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/trip"
                    android:layout_marginStart="5dp"
                    android:layout_gravity="center"
                    android:textColor="@color/grey"
                    style="@style/InterMedium14"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/party"
                android:layout_width="142dp"
                android:layout_height="43dp"
                android:orientation="horizontal"
                android:background="@drawable/style_choose_group_type"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp">
                <ImageView
                    android:id="@+id/party1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_party_hat"
                    android:layout_marginStart="11dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/todo"/>
                <TextView
                    android:id="@+id/party2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/party"
                    android:layout_gravity="center"
                    android:textColor="@color/grey"
                    style="@style/InterMedium14"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/other"
                android:layout_width="110dp"
                android:layout_height="43dp"
                android:orientation="horizontal"
                android:background="@drawable/style_choose_group_type"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp">
                <ImageView
                    android:id="@+id/other1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icons8_bullet_list_1"
                    android:layout_marginStart="11dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/todo"/>
                <TextView
                    android:id="@+id/other2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/other"
                    android:layout_marginStart="7dp"
                    android:layout_gravity="center"
                    android:textColor="@color/grey"
                    style="@style/InterMedium14"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">
            <LinearLayout
                android:id="@+id/family"
                android:layout_width="110dp"
                android:layout_height="43dp"
                android:orientation="horizontal"
                android:background="@drawable/style_choose_group_type"
                android:layout_marginStart="30dp">
                <ImageView
                    android:id="@+id/family1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_family"
                    android:layout_marginStart="11dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/todo"/>
                <TextView
                    android:id="@+id/family2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/family"
                    android:layout_marginStart="7dp"
                    android:layout_gravity="center"
                    android:textColor="@color/grey"
                    style="@style/InterMedium14"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/work"
                android:layout_width="110dp"
                android:layout_height="43dp"
                android:orientation="horizontal"
                android:background="@drawable/style_choose_group_type"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp">
                <ImageView
                    android:id="@+id/work1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_lawyer"
                    android:layout_marginStart="11dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/todo"/>
                <TextView
                    android:id="@+id/work2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/work"
                    android:layout_marginStart="5dp"
                    android:layout_gravity="center"
                    android:textColor="@color/grey"
                    style="@style/InterMedium14"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/love"
                android:layout_width="139dp"
                android:layout_height="43dp"
                android:orientation="horizontal"
                android:background="@drawable/style_choose_group_type"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp">
                <ImageView
                    android:id="@+id/love1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_favourite"
                    android:layout_marginStart="11dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/todo"/>
                <TextView
                    android:id="@+id/love2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/love"
                    android:layout_gravity="center"
                    android:layout_marginStart="7dp"
                    android:textColor="@color/grey"
                    style="@style/InterMedium14"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:id="@+id/addGroup"
        android:layout_width="202dp"
        android:layout_height="40dp"
        android:text="@string/addGroup"
        style="@style/InterMedium18"
        android:textColor="@color/aqua"
        android:background="@drawable/style_create_group"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_marginTop="40dp"/>

</LinearLayout>